--- a/GSAP/style.css
+++ b/GSAP/style.css
@@ -21,10 +21,10 @@ body {
 }
 
 
-#box1 {
-    width: 250px;
-    height: 250px;
-    background-color: green;
+.heading{
+    border: 1px solid red;
+    width: fit-content;
+    padding: 1rem 2rem;
 }
 
 
